--- a/estilo.css
+++ b/estilo.css
@@ -1,75 +1,494 @@
-#principal {
-    margin-top: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap');
+
+:root {
+    --fundo: #dfdfee;
+    --fonte: rgb(78, 78, 175);
+    --white: #ffffff;
+    --preto: #000000;
 }
 
-#menu {
-    list-style-type: none;
-}
-#menu li {
-    display: inline-block;
-    padding-left: 20px;
-    padding-right: 130px;
-    border-left: solid rgba(0, 0, 255, 0.534) 2px;
-}
-#logo , #navegação {
-    float:inline-start
-}
-#navegação {
-    margin-left: 20px;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: var(--fundo);
 }
 
-body {
-    background-color: #dfdfee
+h1 {
+    color: var(--fonte);
+    font-family: "Libre Caslon Text", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
 }
 
+h2 {
+    color: var(--fonte);
+    font-family: "Libre Caslon Text", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 25px;
+}
 
-.botao {
+h3{
+    color: var(--fonte);
+    font-family: "Libre Caslon Text", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+}
+
+p {
+    color: var(--fonte);
+    font-family: "Libre Caslon Text", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 15px;
+}
+
+header {
+    background-color: var(--fundo);
+    font-family: "Libre Caslon Text", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: larger;
+}
+
+.nav-menu li {
+    list-style: none;
+}
+
+hr {
+    background-color: var(--fonte);
+    width: 55%;
+    height: 3px;
+}
+
+.sobre hr {
+    width: 82%;
+}
+
+.fotos hr {
+    width: 65%;
+}
+
+.navbar a {
+    color: var(--fonte);
+    text-decoration: none;
+}
+
+.navbar {
+    position: fixed;
+    min-height: 70px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 34px;
+    background-color: var(--fundo);
+    width: 100%;
+    color: var(--fonte);
+}
+
+.logo img {
+    margin-top: 5px;
+    width: 90px;
+}
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.menu-bar {
+    display: none;
+    cursor: pointer;
+}
+
+.bar {
+    display: block;
+    width: 28px;
+    height: 3px;
+    border-radius: 2px;
+    margin: 5px auto;
+    background-color: var(--fonte);
+    transition: all 0.3s ease-in-out;
+}
+
+.home img {
+    width: 100%;
+}
+
+.home .row {
+    display: flex;
+}
+
+.sobre {
+    padding: 10% 5% 0 5%;
+}
+
+.sobre h1 {
+    font-size: 30px;
+}
+
+.sobre .row1 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5%;
     align-items: center;
 }
 
+.sobre .row2 {
+    display: flex;
+    justify-content: space-between;
+}
 
-.content {
+.fotos {
+    padding: 10% 5% 0 5%;
+}
+
+.fotos h1{
+    font-size: 30px;
+}
+
+.fotos .row1{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5%;
+    align-items: center;
+}
+
+.fotos .row2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.fotos img {
+    width: 100%;
+}
+.sobre .c-card {
+    padding: 0.5rem;
+    margin: 2rem;
     text-align: center;
-    color: rgb(78, 78, 175);
+    border: solid var(--fonte) 2px;
+    align-items: center;
+    justify-content: center;
+}
+
+.fotos .c-card {
+    padding: 0.5rem;
+    margin: 0.5rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.sobre .c-card img{
+    margin-bottom: 5%;
+    width: 55%;
+}
+
+.fotos .c-card img {
+    margin-bottom: 5%;
+}
+
+.videos {
+    padding: 10% 5% 0 5%;
+}
+
+.videos h1{
+    font-size: 30px;
+}
+
+.videos .row1{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5%;
+    align-items: center;
+}
+
+.videos .row2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.videos img {
+    width: 100%;
+}
+
+.videos .c-card {
+    padding: 0.5rem;
+    margin: 0.5rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+}
+
+.videos .c-card img {
+    margin-bottom: 5%;
+}
+
+.videos .c-card iframe {
+    margin-bottom: 5%;
+    width: 400px;
+    height: 315px;
+}
+
+.c-card h2 {
+    padding: 0.5rem;
+}
+
+.sobre li {
+    padding: 0.5rem;
+    list-style: inside;
+    color: var(--fonte);
+}
+
+.col1 {
+    padding-top: 15%;
+    padding-left: 3%;
+    padding-right: 3%;
+    text-align: center;
+}
+
+.col1 h2 {
+    margin-bottom: 70%;
+}
+
+.col2 {
+    padding-top: 70px;
+}
+
+.contato{
+    width: 100%;
+    text-align: center;
+    padding: 10% 35% 0 35%;
+}
+
+.contato h1{
+    padding: 2rem;
+}
+
+.contato li {
+    list-style: none;
+    color: var(--fonte);
+    padding: 0.5rem;
+    margin: 2rem;
+    text-align: center;
+    border: solid var(--fonte) 2px;
+    align-items: center;
+    justify-content: center;
+}
+
+.contato a {
+    text-decoration: none;
+    color: var(--fonte);
+}
+
+@media (max-width: 768px) {
+    h1{
+        font-size: 30px;
+    }
+    h2{
+        font-size: 20px;
+    }
+    .menu-bar {
+        display: block;
+    }
+
+    .menu-bar.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-bar.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .menu-bar.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .navigation {
+        padding: 18px 20px;
+    }
+
+    .menu {
+        display: block;
+    }
+
+    .nav-menu {
+        position: fixed;
+        right: -100%;
+        top: 80px;
+        gap: -10px;
+        border-radius: 0 0 20px 20px;
+        text-align: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        transition: 0.3s;
+    }
+
+    .nav-item {
+        margin: 16px 0;
+    }
+
+    .nav-menu.active {
+        right: 0;
+    }
+
+    .home{
+        padding-top: 20%;
+    }
+
+    .col1 h2{
+        margin-bottom: 40px;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .row1{
+        margin-top: 15%;
+    }
+    .row1 hr{
+        width: 50%;
+    }
+    .row2 {
+        flex-direction: column;
+    }
+    .contato {
+        padding: 10% 10% 0 10%;
+    }
     
-  
+    .contato h1 {
+        padding: 1.5rem;
+        font-size: 1.5rem;
+    }
+
+    .contato li {
+        padding: 0.5rem;
+        margin: 1rem 0;
+        font-size: 1rem;
+    }
 }
 
-.fotinhacapa {
-    text-align:right;
+@media (max-width: 480px) {
+    h1{
+        font-size: 20px;
+    }
+    h2{
+        font-size: 10px;
+    }
+    .sobre h1{
+        font-size: 20px;
+    }
+    .sobre h2{
+        font-size: 15px;
+    }
+    .fotos h1{
+        font-size: 20px;
+    }
+    .fotos h2{
+        font-size: 15px;
+    }
     
-}
+    .videos h1{
+        font-size: 20px;
+    }
+    .videos h2{
+        font-size: 15px;
+    }
+    .menu-bar {
+        display: block;
+    }
 
-.portfolio {
-    color: rgb(78, 78, 175);
-}
+    .menu-bar.active .bar:nth-child(2) {
+        opacity: 0;
+    }
 
-.apresentação{
-    text-align: left;
-    text-size-adjust: 20%;
-    margin-top: 10%;
-    margin-right: 50%;
-    color: rgb(78, 78, 175);
-}
+    .menu-bar.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
 
-.fotosobre{
-    color: rgb(78, 78, 175);
-}
-.textovídeo{
-    color: rgb(78, 78, 175);
-}
+    .menu-bar.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 
-.textofotos{
-    color: rgb(78, 78, 175);
-}
-.textosobre1{
-    color: rgb(78, 78, 175);
-}
-.textosobre2{
-    color: rgb(78, 78, 175);
-}
-.textosobre3{
-    color: rgb(78, 78, 175);
+    .navigation {
+        padding: 18px 20px;
+    }
+
+    .menu {
+        display: block;
+    }
+
+    .nav-menu {
+        position: fixed;
+        right: -100%;
+        top: 80px;
+        gap: -10px;
+        border-radius: 0 0 20px 20px;
+        text-align: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        transition: 0.3s;
+    }
+
+    .nav-item {
+        margin: 16px 0;
+    }
+
+    .nav-menu.active {
+        right: 0;
+    }
+
+    .navbar hr{
+        width: 40%;
+    }
+
+    .home{
+        padding-top: 20%;
+    }
+
+    .col1 h2{
+        margin-bottom: 40px;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .row1{
+        margin-top: 25%;
+    }
+    .row1 hr{
+        width: 50%;
+    }
+    .row2 {
+        flex-direction: column;
+    }
+    .videos .c-card iframe {
+        max-width: 250px;
+        max-height: 196.875px;
+    }
+    .contato {
+        padding: 30% 5% 0 5%;
+    }
+
+    .contato h1 {
+        padding: 1rem;
+        font-size: 1.2rem;
+    }
+
+    .contato li {
+        padding: 0.3rem;
+        margin: 0.5rem 0;
+        font-size: 0.9rem;
+    }
 }
